--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -18,9 +21,9 @@
 <body>
     <header>
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+        <nav class="navbar navbar-expand-lg bg-black" data-bs-theme="dark">
+            <div class="container">
+                <a class="navbar-brand text-white" href="#">Evelyn</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,16 +31,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-white" aria-current="page" href="#presentacion">Yo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link text-white" href="#habilidades">Habilidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link text-white" href="#proyectos">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                            <a class="nav-link text-white" href="#testimonios">Testimonios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#contacto">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -50,20 +56,17 @@
 
     <main>
         <section id="presentacion" class="container col-xxl-8 px-4 py-5">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-                        width="700" height="500" loading="lazy">
-                </div>
+            <div class="row flex-lg-row align-items-center g-5 py-5">
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Responsive left-aligned hero with image
+                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Evelyn Perea
                     </h1>
                     <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the
                         world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
                         responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contáctame</button>
+                        <button type="button"
+                            class="btn btn-outline-secondary btn-lg px-4">evelyncperea@gmail.com</button>
                     </div>
                 </div>
             </div>
@@ -71,56 +74,43 @@
 
 
         <section id="habilidades" class="container px-4 py-5">
-            <h2 class="pb-2 border-bottom">Hanging icons</h2>
+            <h2 class="pb-2 border-bottom">Habilidades</h2>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+
                 <div class="col d-flex align-items-start">
                     <div
-                        class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#toggles2"></use>
-                        </svg>
+                        class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 py-2 px-3 ">
+                        <i class="bi bi-bookmark-star"></i>
                     </div>
                     <div>
-                        <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="btn btn-primary">
-                            Primary button
-                        </a>
+                        <h3 class="fs-2 text-body-emphasis">Desarrollo Web</h3>
+                        <p>Conocimientos en HTML, CSS.</p>
                     </div>
                 </div>
+
                 <div class="col d-flex align-items-start">
                     <div
-                        class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#cpu-fill"></use>
-                        </svg>
+                        class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 py-2 px-3 ">
+                        <i class="bi bi-bookmark-star"></i>
                     </div>
                     <div>
-                        <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="btn btn-primary">
-                            Primary button
-                        </a>
+                        <h3 class="fs-2 text-body-emphasis">Trabajo en equipo</h3>
+                        <p>Colaboro con equipos multidisciplinarios.</p>
                     </div>
                 </div>
+
                 <div class="col d-flex align-items-start">
                     <div
-                        class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#tools"></use>
-                        </svg>
+                        class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 py-2 px-3 ">
+                        <i class="bi bi-bookmark-star"></i>
                     </div>
                     <div>
-                        <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
-                        <a href="#" class="btn btn-primary">
-                            Primary button
-                        </a>
+                        <h3 class="fs-2 text-body-emphasis">Responsabilidad</h3>
+                        <p>Compromiso con .</p>
                     </div>
                 </div>
+
+
             </div>
         </section>
 
@@ -282,7 +272,7 @@
 
 
 
-    <footer class="py-3 my-4">
+    <footer id="contacto" class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
