Cambios a las secciones Habilidades y Proyectos

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Evelyn Perea
                     </h1>
-                    <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the
-                        world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
-                        responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                    <p class="lead">Analista de datos con un título en Administración de Empresas. Como lectora
+                        apasionada, aplico un enfoque crítico y detallado en mi trabajo, transformando datos complejos
+                        en información clara y útil. Mi interés en la programación e idiomas me permite optimizar
+                        procesos y comunicarme de manera efectiva en diversos contextos. </p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Contáctame</button>
                         <button type="button"
@@ -83,8 +84,21 @@
                         <i class="bi bi-bookmark-star"></i>
                     </div>
                     <div>
+                        <h3 class="fs-2 text-body-emphasis">Análisis de Datos</h3>
+                        <p>Manejo herramientas como Excel, SQL, Tableau para transformar datos en insights claros para
+                            decisiones informadas y estrategias efectivas.</p>
+                    </div>
+                </div>
+
+                <div class="col d-flex align-items-start">
+                    <div
+                        class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 py-2 px-3 ">
+                        <i class="bi bi-bookmark-star"></i>
+                    </div>
+                    <div>
                         <h3 class="fs-2 text-body-emphasis">Desarrollo Web</h3>
-                        <p>Conocimientos en HTML, CSS.</p>
+                        <p>Conocimientos en HTML, CSS y JS para crear y mantener sitios web funcionales, atractivos e
+                            interactivos. </p>
                     </div>
                 </div>
 
@@ -94,19 +108,10 @@
                         <i class="bi bi-bookmark-star"></i>
                     </div>
                     <div>
-                        <h3 class="fs-2 text-body-emphasis">Trabajo en equipo</h3>
-                        <p>Colaboro con equipos multidisciplinarios.</p>
-                    </div>
-                </div>
-
-                <div class="col d-flex align-items-start">
-                    <div
-                        class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 py-2 px-3 ">
-                        <i class="bi bi-bookmark-star"></i>
-                    </div>
-                    <div>
-                        <h3 class="fs-2 text-body-emphasis">Responsabilidad</h3>
-                        <p>Compromiso con .</p>
+                        <h3 class="fs-2 text-body-emphasis">Trabajo en Equipo</h3>
+                        <p>Compromiso en colaborar en equipos, buscando mejorar el desempeño conjunto, impulsando la
+                            comunicación con otros para alcanzar metas comunes.
+                        </p>
                     </div>
                 </div>
 
@@ -116,90 +121,60 @@
 
 
         <section id="proyectos" class="container px-4 py-5">
-            <h2 class="pb-2 border-bottom">Custom cards</h2>
+            <h2 class="pb-2 border-bottom">Proyectos</h2>
 
             <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-                <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                        style="background-image: url('unsplash-photo-1.jpg');">
-                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
-                            <ul class="d-flex list-unstyled mt-auto">
-                                <li class="me-auto">
-                                    <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                        class="rounded-circle border border-white">
-                                </li>
-                                <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#geo-fill"></use>
-                                    </svg>
-                                    <small>Earth</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#calendar3"></use>
-                                    </svg>
-                                    <small>3d</small>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+
 
                 <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                        style="background-image: url('unsplash-photo-2.jpg');">
-                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple
-                                lines</h3>
-                            <ul class="d-flex list-unstyled mt-auto">
-                                <li class="me-auto">
-                                    <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                        class="rounded-circle border border-white">
-                                </li>
-                                <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#geo-fill"></use>
-                                    </svg>
-                                    <small>Pakistan</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#calendar3"></use>
-                                    </svg>
-                                    <small>4d</small>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                    <div id="proyecto-1"
+                        class="proyecto card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
 
-                <div class="col">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                        style="background-image: url('unsplash-photo-3.jpg');">
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h3>
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Proyecto: Clon de Google.</h3>
                             <ul class="d-flex list-unstyled mt-auto">
-                                <li class="me-auto">
-                                    <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                        class="rounded-circle border border-white">
-                                </li>
                                 <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#geo-fill"></use>
-                                    </svg>
-                                    <small>California</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#calendar3"></use>
-                                    </svg>
-                                    <small>5d</small>
+                                    <i class="bi bi-code-square text-secondary-emphasis"></i>
+                                    <a href="https://statuesque-pudding-46142d.netlify.app" target="_blank" class="ps-3">URL</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
+
+                <div class="col">
+                    <div id="proyecto-2"
+                        class="proyecto card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
+
+                        <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Proyecto: Mi Primer Página</h3>
+                            <ul class="d-flex list-unstyled mt-auto">
+                                <li class="d-flex align-items-center me-3">
+                                    <i class="bi bi-code-square text-secondary-emphasis"></i>
+                                    <a href="https://astonishing-zabaione-dafea5.netlify.app" target="_blank" class="ps-3">URL</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col">
+                    <div id="proyecto-3"
+                        class="proyecto card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
+
+                        <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Caso Práctico: Bellabeat</h3>
+                            <ul class="d-flex list-unstyled mt-auto">
+                                <li class="d-flex align-items-center me-3">
+                                    <i class="bi bi-clipboard-data text-light"></i>
+                                    <a href="" target="_blank" class="ps-3">URL</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
