--- a/index.html
+++ b/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Evelyn Perea </title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&family=Bebas+Neue&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nanum+Gothic&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -21,7 +35,7 @@
 <body>
     <header>
 
-        <nav class="navbar fixed-top navbar-expand-lg bg-black" data-bs-theme="dark">
+        <nav class="navbar fixed-top navbar-expand-lg " data-bs-theme="dark">
             <div class="container">
                 <a class="navbar-brand text-white" href="#">Evelyn</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -31,8 +45,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#presentacion">Yo</a>
+                            <a class="nav-link active text-white" aria-current="page" href="#presentacion">Sobre mí</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-white" href="#habilidades">Habilidades</a>
                         </li>
@@ -60,16 +75,13 @@
             <div class="container col-xxl-8 px-4 py-5 d-flex justify-content-start align-items-center">
                 <div class="row flex-lg-row align-items-center g-5 py-5">
                     <div class="col-lg-6">
-                        <h1 class="display-5 fw-bold text-white lh-1 mb-3">Evelyn Perea
+                        <h1 id="app" class="display-5 fw-bold text-white lh-1 mb-3 bebas-neue-regular">Evelyn Perea
                         </h1>
-                        <p class="lead text-white">Analista de datos con un título en Administración de Empresas. Como
-                            lectora
-                            apasionada, aplico un enfoque crítico y detallado en mi trabajo, transformando datos
-                            complejos
-                            en información clara y útil. Mi interés en la programación e idiomas me permite optimizar
-                            procesos y comunicarme de manera efectiva en diversos contextos. </p>
+                        <p class="lead text-white">Analista de datos con un título en Administración de Empresas. Amante
+                            de la lectura adémas de creadora de historias a través de los datos, y otros elementos
+                            fantásticos. </p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2"><a
+                            <button type="button" class="boton btn btn-info btn-lg px-4 me-md-2"><a
                                     class="link-offset-2 link-underline link-underline-opacity-0 text-white"
                                     href="https://www.linkedin.com/in/evelyn-perea-734704316/"
                                     role="button">Linkeind</a> </button>
@@ -89,11 +101,12 @@
                 <div class="col d-flex align-items-start">
                     <div
                         class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 py-2 px-3 ">
-                        <i class="bi bi-clipboard-data"></i>
+                        <i class="bi bi-clipboard-data icon"></i>
                     </div>
                     <div>
                         <h3 class="fs-2 text-body-emphasis">Análisis de Datos</h3>
-                        <p>Manejo herramientas como Excel, SQL, Tableau para transformar datos en insights claros, así, poder tomar
+                        <p>Manejo herramientas como Excel, SQL, Tableau para transformar datos en insights claros, así,
+                            poder tomar
                             decisiones informadas y estrategias efectivas.</p>
                     </div>
                 </div>
@@ -101,7 +114,7 @@
                 <div class="col d-flex align-items-start">
                     <div
                         class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 py-2 px-3 ">
-                        <i class="bi bi-code-square"></i>
+                        <i class="bi bi-code-square icon "></i>
                     </div>
                     <div>
                         <h3 class="fs-2 text-body-emphasis">Desarrollo Web</h3>
@@ -113,7 +126,7 @@
                 <div class="col d-flex align-items-start">
                     <div
                         class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 py-2 px-3 ">
-                        <i class="bi bi-bookmark-star"></i>
+                        <i class="bi bi-bookmark-star icon"></i>
                     </div>
                     <div>
                         <h3 class="fs-2 text-body-emphasis">Trabajo en Equipo</h3>
@@ -142,9 +155,12 @@
                             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Proyecto: Clon de Google.</h3>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="d-flex align-items-center me-3">
-                                    <i class="bi bi-code-square text-secondary-emphasis"></i>
-                                    <a href="https://statuesque-pudding-46142d.netlify.app" target="_blank"
-                                        class="ps-3">URL</a>
+                                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                                        <button type="button" class="boton btn btn-info btn-sm px-4 me-md-2">
+                                            <i class="bi bi-code-square text-white"></i><a
+                                                class="link-offset-2 link-underline link-underline-opacity-0 text-white px-2"
+                                                href="https://statuesque-pudding-46142d.netlify.app"
+                                                role="button">URL</a> </button>
                                 </li>
                             </ul>
                         </div>
@@ -159,9 +175,12 @@
                             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Proyecto: Mi Primer Página</h3>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="d-flex align-items-center me-3">
-                                    <i class="bi bi-code-square text-secondary-emphasis"></i>
-                                    <a href="https://astonishing-zabaione-dafea5.netlify.app" target="_blank"
-                                        class="ps-3">URL</a>
+                                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                                        <button type="button" class="boton btn btn-info btn-sm px-4 me-md-2">
+                                            <i class="bi bi-code-square text-white"></i><a
+                                                class="link-offset-2 link-underline link-underline-opacity-0 text-white px-2"
+                                                href="https://astonishing-zabaione-dafea5.netlify.app"
+                                                role="button">URL</a> </button>
                                 </li>
                             </ul>
                         </div>
@@ -177,8 +196,11 @@
                             <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Caso Práctico: Bellabeat</h3>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="d-flex align-items-center me-3">
-                                    <i class="bi bi-clipboard-data text-light"></i>
-                                    <a href="" target="_blank" class="ps-3">URL</a>
+                                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                                        <button type="button" class="boton btn btn-info btn-sm px-4 me-md-2">
+                                            <i class="bi bi-clipboard-data icon text-white"></i><a
+                                                class="link-offset-2 link-underline link-underline-opacity-0 text-white px-2"
+                                                href="" role="button">URL</a> </button>
                                 </li>
                             </ul>
                         </div>
@@ -193,7 +215,7 @@
             <h1 class="text-center my-5">Testimonios</h1>
             <div id="myCarousel" class="carousel slide carousel-dark mb-6 carousel-fade p-4" data-bs-theme="dark"
                 data-bs-ride="carousel">
-    
+
                 <div class="carousel-inner">
 
                     <div class="carousel-item active">
@@ -240,8 +262,9 @@
 
 
 
-    <footer id="contacto" class="bg-black py-3 mt-3" data-bs-theme="dark">
-        <h4 class="text-white text-center my-5">"Con la recopilación de datos, ‘cuanto antes mejor’ es siempre la mejor
+    <footer id="contacto" class="fondo-pie py-3 mt-3">
+        <h4 id="frase" class="text-white text-center my-5">"Con la recopilación de datos, ‘cuanto antes mejor’ es
+            siempre la mejor
             respuesta."</h4>
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
 
@@ -263,6 +286,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
