Agregué opción de email

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <h1 id="app" class="display-5 fw-bold text-white lh-1 mb-3 bebas-neue-regular">Evelyn Perea
                         </h1>
                         <p class="lead text-white">Analista de datos con un título en Administración de Empresas. Amante
-                            de la lectura adémas de creadora de historias a través de los datos, y otros elementos
+                            de la lectura adémas de creadora de historias a través de los datos y otros elementos
                             fantásticos. </p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                             <button type="button" class="boton btn btn-info btn-lg px-4 me-md-2"><a
@@ -86,7 +86,8 @@
                                     href="https://www.linkedin.com/in/evelyn-perea-734704316/"
                                     role="button">Linkeind</a> </button>
                             <button type="button"
-                                class="btn btn-outline-secondary btn-lg px-4">evelyncperea@gmail.com</button>
+                                class="btn btn-outline-secondary link-underline-dark btn-lg px-4"> <a href="mailto:evelyncperea@gmail.com" class="correo">evelyncperea@gmail.com</a></button>
+                            </div></a></button>
                         </div>
                     </div>
                 </div>
@@ -105,7 +106,7 @@
                     </div>
                     <div>
                         <h3 class="fs-2 text-body-emphasis">Análisis de Datos</h3>
-                        <p>Manejo herramientas como Excel, SQL, Tableau para transformar datos en insights claros, así,
+                        <p>Manejo herramientas como Excel, SQL, Tableau, R, para transformar datos en insights claros, así,
                             poder tomar
                             decisiones informadas y estrategias efectivas.</p>
                     </div>
