Actualización de urls

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                         <button type="button" class="boton btn btn-info btn-sm px-4 me-md-2">
                                             <i class="bi bi-code-square text-white"></i><a
                                                 class="link-offset-2 link-underline link-underline-opacity-0 text-white px-2"
-                                                href="https://statuesque-pudding-46142d.netlify.app"
+                                                href="https://clon-google.netlify.app"
                                                 role="button">URL</a> </button>
                                 </li>
                             </ul>
@@ -180,7 +180,7 @@
                                         <button type="button" class="boton btn btn-info btn-sm px-4 me-md-2">
                                             <i class="bi bi-code-square text-white"></i><a
                                                 class="link-offset-2 link-underline link-underline-opacity-0 text-white px-2"
-                                                href="https://astonishing-zabaione-dafea5.netlify.app"
+                                                href="https://project-enhypen.netlify.app"
                                                 role="button">URL</a> </button>
                                 </li>
                             </ul>
